<resources>
    <string name="app_name">Celesta Remastered</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="my_profile">My Profile</string>
    <string name="aboutus">Celesta is the annual Techno-Management fest of IIT Patna. A journey that began years ago is back again, with a fantabulous never seen before Remastered version.\n\nIts main motive is to promote technical and management skills and enthusiasm amongst the young and aspiring bright minds of our nation. It\'s a platform, a stage of grandeur where everyone has the chance to showcase their ideas, technical skills and creativity which hosts a plethora of guest lectures by dignified intellectuals and inspiring individuals who have excelled in their fields.\n\nWhy should you attend Celesta?\nTo have a "Celestial" experience of course!\n\nMetal clashing against metal, minds battling to solve the most complicated of treasure hunts, an opportunity to pitch your idea that never made it through your fear, to finally bring all those hours of playing games to use for having a shot at winning the most exciting of prizes, Celesta Remastered has it all!</string>
    <string name="events">Events</string>
    <string name="charity">Charity</string>
    <string name="lectures">Lectures</string>
    <string name="url_eventinfo">http://celesta.org.in/apiLe/app_regEveList</string>
    <string name="workshops">Workshops</string>
    <string name="schedule">Schedule</string>
    <string name="workshopregisterlink">https://www.thecollegefever.com/events/celesta-2018-yEYo3DFhwl</string>
    <string name="PasswordMismatch">Password Mismatch</string>
    <string name="pronite">Pro Nite</string>
    <string name="team">Team</string>
    <string name="developers">App Developers</string>
    <string name="EmptyFields">Please fill all the fields</string>
    <string name="sponsors">Sponsors</string>
    <string name="about">About</string>
    <string name="gallery">Gallery</string>
    <string name="social">Social</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="NJACK_Events">NJACK Events</string>
    <string name="ACE_Events">ACE Events</string>
    <string name="SAE_Events">SAE Events</string>
    <string name="SCME_Events">SCME Events</string>
    <string name="Sparkonics_Events">Sparkonics Events</string>
    <string name="Threshold_Events">Threshold Events</string>
    <string name="login_status">login_status</string>
    <string name="full_name">full_name</string>
    <string name="id">id</string>
    <string name="college_name">college_name</string>
    <string name="event_participated">event_participated</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="map">Map</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="college_hint">College</string>
    <string name="email_id_hint">Email ID</string>
    <string name="clst_id_hint">Celesta ID</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="error_invalid_email">Invalid Email!</string>
    <string name="invalid_password_length">Length should be more than 5 characters</string>
    <string name="error_password_match">Passwords don\'t match</string>
    <string name="error_empty_field">Empty Field</string>
    <string name="mobile_no_hint">Mobile No.</string>
    <string name="error_invalid_mobile_no">Invalid Mobile No.</string>
    <string name="register_url">http://celesta.org.in/apiLe/register</string>
    <string name="eventregister_url">http://celesta.org.in/apiLe/app_register</string>
    <string name="api_key">iitp</string>
    <string name="register_param_name">name</string>
    <string name="fetch_msg">Fetching Data...</string>
    <string name="caid">CA Referral ID (optional)</string>
    <string name="register_param_college">college</string>
    <string name="register_param_emailid">emailid</string>
    <string name="register_param_password">password</string>
    <string name="register_param_mobile">mobile</string>
    <string name="register_param_apiKey">caID</string>
    <string name="JSON_status">status</string>
    <string name="message_registration_success">Registration Successful.  Check your Email for the UniqueID!!</string>
    <string name="message_registration_duplicate">This Email is registered. Please Sign In</string>
    <string name="Clubs"> Clubs</string>
    <string name="LoremIpsum"> Believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the InternetIt uses a you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="share_to">Share To</string>
    <string name="share_message">Check out this event in IIT Patna\'s technical fest Celesta:</string>
    <string name="name">Name</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="description">Description</string>
    <string name="rules_and_regulations">Rules &amp; Regulations</string>
    <string name="event_organizers">Event Organizers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keep_checking_for_updates">Keep checking for updates.</string>
    <string name="follow_us">Follow us </string>
    <string name="official_website">Our official website</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="url_login">http://celesta.org.in/apiLe/login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="url_forgot_password">http://celesta.org.in/reset</string>
    <string name="username">User Name </string>
    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Login</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="my_profile_icon">my_profile_icon</string>
    <string name="events_icon">events_icon</string>
    <string name="schedule_icon">schedule_icon</string>
    <string name="team_icon">team_icon</string>
    <string name="app_developers_icon">app_developers_icon</string>
    <string name="sponsors_icon">sponsors_icon</string>
    <string name="about_icon">about_icon</string>
    <string name="social_icon">social_icon</string>
    <string name="mayank_image">mayank_image</string>
    <string name="mayank_vaidya">Mayank Vaidya</string>
    <string name="mayank8318">mayank8318</string>
    <string name="fb_icon">fb_icon</string>
    <string name="github_icon">github_icon</string>
    <string name="mukunta_image">mukunta_image</string>
    <string name="mukuntha_n_s">Mukuntha N S</string>
    <string name="muks14">muks14</string>
    <string name="manish_image">manish_image</string>
    <string name="ivary43">ivary43</string>
    <string name="ipl_auction_image">ipl_auction_image</string>
    <string name="login_background">login_background</string>
    <string name="linked_icon">linked_icon</string>
    <string name="twitter_icon">twitter_icon</string>
    <string name="login_icon">login_icon</string>
    <string name="manish_kumar">Manish Kumar</string>
    <string name="Id">Id</string>
    <string name="celesta_id">122443</string>
    <string name="college">College</string>
    <string name="iit_patna">IIT Patna</string>
    <string name="njath_cpt">NJATH,CPT</string>
    <string name="time">Time :</string>
    <string name="location">Location :</string>
    <string name="card_image">card_image</string>
    <string name="gallery_image">gallery_image</string>
    <string name="this_was_a_whole_new_level_of_race_foe_jkdjfd_dfjdidfd_fdf_dd_fdkfdjfkdjfdfdfd_fdfd_fdfdfdfldfjdlfjdldjfdlfdjdljdldjdlfjddldjf">This was a whole new level of race foe jkdjfd dfjdidfd fdf dd fdkfdjfkdjfdfdfd fdfd fdfdfdfldfjdlfjdldjfdlfdjdljdldjdlfjddldjf</string>
    <string name="log_in">Login/Register</string>
    <string name="log_out">Logout</string>
    <string name="faq">FAQ</string>
    <string name="profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="proniteinfo">A stand up comedian known for his fresh and universal content striking the right chord with people across all age groups and ethnicities. With over 50 million views by just 4 videos, Jaspreet has done 400+ shows and performed in over 30 cities in India, Australia, United Kingdom and U.A.E.</string>
    <string name="pronite2">Celesta Remastered brings to you Jaspreet Singh, the renowned stand-up comedian, who will be present to crack you up and enrich the entire atmosphere. Jaspreet, a.k.a. Jassi, is a very innocent looking guy(but is he?) who derives most of his humor from the things happening in his house and around him in the city. His views of the world are quite radical, like it\'s filled with the fancy of the stupid, and well his bits reflect the same.</string>
    <string name="pronite3">Come, join us, as Jaspreet brings the house down at the Closing Ceremony of Celesta Remastered, on 28th of October!\nPresented by White Heaven Entertainments Pvt Ltd, this would truly be a sign of the Remastering.\nHurry up! Get your passes.</string>
    <string name="answer">Answer</string>
    <string name="default_rating">100</string>
    <string name="question">Question</string>
    <string name="rating_imageView">rating_imageView</string>
    <string name="vatsal">Vatsal Singhal</string>
    <string name="sheetal">Sheetal Gupta</string>
    <string name="title_sponsors">Title Sponsor</string>
    <string name="power_sponsors">Power Sponsor</string>
    <string name="associate_sponsors">Associate Sponsor</string>
    <string name="beverage_sponsors">Beverage Partner</string>
    <string name="event_sponsors">Event Sponsor</string>
    <string name="coding_partners">Coding Partners</string>
    <string name="health_partners">Health Partners</string>
    <string name="stationary_partners">Stationary Partners</string>
    <string name="radio_partner">Radio Partner</string>
    <string name="food_partners">Food Partners</string>
    <string name="training_partner">Training Partner</string>
    <string name="implementation_partner">Implementation Partner</string>
    <string name="web_and_sms_partner">Web and SMS Partner</string>
    <string name="merchandise_partner">Merchandise Partner</string>
    <string name="workshop_partner">Exclusive Workshop Partner</string>
    <string name="blogger_outreach_partner">Blogger Outreach Partner</string>
    <string name="magazine_partner">Magazine Partner</string>
    <string name="online_media_partner">Online Media Partner</string>
    <string name="printing_partner">Printing Partner</string>
    <string name="gifting_partner">Gifting Partner</string>
    <string name="online_learning_partner">Online Learning Partner</string>
    <string name="official_savings_partner">Official Savings Partner</string>
    <string name="electronics_partner">Audio Partner</string>

</resources>
