<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_profile"
            android:icon="@drawable/ic_person_pin_white_24dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/menu_item_schedule"
            android:icon="@drawable/ic_event_white_24dp"
            android:title="@string/schedule" />
        <item
            android:id="@+id/menu_item_sponsors"
            android:icon="@drawable/ic_monetization_on_white_24dp"
            android:title="@string/sponsors" />
        <item
            android:id="@+id/menu_item_about"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/about"/>
        <item
            android:id="@+id/menu_item_faq"
            android:icon="@drawable/ic_check_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/menu_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>
