<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/cardview_dark_background"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/faq_card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="4dp"
        android:paddingTop="10dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:id="@+id/faq_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/question"
                android:textColor="#201d1d"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/answer_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/answer_rating_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/rating_imageView"
                        android:paddingTop="15dp"
                        android:src="@drawable/ic_network_check_black_24dp"

                        />

                    <TextView
                        android:id="@+id/rating_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="25dp"
                        android:text="@string/default_rating"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/answer_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#424242"
                    android:text="@string/answer"
                    android:textColor="#f5242728" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>