<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    xmlns:card_view="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="20dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/colorSchedule"
                >
            <in.org.celesta2k17.listeners.ViewPagerCustomDuration
                android:id="@+id/events_pager"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_height="230dp"
                android:layout_marginBottom="0dp" />
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:padding="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="160dp"
                            card_view:cardElevation="20dp"
                            android:padding="0dp"
                            android:layout_margin="4dp"
                            app:cardBackgroundColor="@color/colorMyProfile"
                            android:onClick="toMyProfile">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="34dp"
                                android:src="@drawable/ic_person_pin_white_24dp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:layout_marginBottom="24dp"
                                android:text="@string/my_profile"
                                android:textColor="@color/white_transparent"
                                android:textSize="24dp"
                                android:textStyle="bold" />
                        </android.support.v7.widget.CardView>
                        <android.support.v7.widget.CardView
                            android:id="@+id/schedule"
                            android:layout_width="match_parent"
                            android:layout_height="160dp"
                            card_view:cardElevation="20dp"
                            android:padding="0dp"
                            android:layout_margin="4dp"
                            app:cardBackgroundColor="@color/colorSchedule"
                            >
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="34dp"
                                android:src="@drawable/ic_event_white_24dp"
                                android:contentDescription="@string/schedule_icon" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:layout_marginBottom="24dp"
                                android:text="@string/schedule"
                                android:textColor="@color/white_transparent"
                                android:textSize="24dp"
                                android:textStyle="bold" />.
                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:id="@+id/events"
                            android:layout_width="match_parent"
                            android:layout_height="230dp"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginTop="4dp"
                            android:padding="0dp"
                            app:cardBackgroundColor="@color/colorEvents"
                            card_view:cardElevation="20dp">

                            <TextView
                                android:layout_width="200dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal|bottom"
                                android:layout_marginBottom="70dp"
                                android:paddingTop="0dp"
                                android:rotation="-90"
                                android:text="@string/events"
                                android:textColor="@color/white_transparent"
                                android:textSize="60dp"
                                android:textStyle="bold" />
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/charity"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginTop="8dp"
                            android:padding="0dp"
                            app:cardBackgroundColor="@color/colorGallery"
                            card_view:cardElevation="20dp">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="left|top"
                                android:layout_marginTop="18dp"
                                android:src="@drawable/ic_monetization_on_white_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="56dp"
                                android:layout_marginTop="2dp"
                                android:text="@string/charity"
                                android:textColor="@color/white_transparent"
                                android:textSize="20dp"
                                android:textStyle="bold" />
                        </android.support.v7.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
                    <android.support.v7.widget.CardView
                        android:id="@+id/pronites"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        card_view:cardElevation="20dp"
                        android:padding="0dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="6dp"
                        app:cardBackgroundColor="@color/colorSocial"
                        >
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginBottom="18dp"
                            android:layout_marginLeft="60dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/ic_stars_white_24dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="140dp"
                            android:text="@string/pronite"
                            android:textColor="@color/white_transparent"
                            android:textSize="38dp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_map_white_24dp"
        app:backgroundTint="@color/fab_background" />
</RelativeLayout>